fix: [#154] Editor-Line-Number-overflow-fix
Fixes: scrolling of editor line number which is dependent on
scrolling of codebox textarea

--- a/src/components/editor/view/components/index.scss
+++ b/src/components/editor/view/components/index.scss
@@ -26,6 +26,7 @@
     font-family: 'Courier New', Courier, monospace;
     font-weight: bold;
     color: $text-dark;
+    overflow: hidden;
   }
 
   #editor-codebox {
